Update I beam shapes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
           Length: <input type="number" id="length-input" onkeyup="updateLength()" onmousedown="updateLength()" onmouseup="updateLength()" max="1000" placeholder="Unbraced beam length">
           ft
         </div>
-        <div>Ix goes here</div>
       </div>
       <div id="middle-container">
         <h1>23 Matching beams found</h1>
@@ -268,7 +267,7 @@
         <a class="btn">Mn</a>
       </div>
       <div id="bottom-row">
-        <div id="bottom-left"><div style="position: absolute;">Need to show dimensions</div></div><div id="bottom-right"></div>
+        <div id="bottom-left"><div style="position: absolute;">Need to show dimensions of I beam here</div></div><div id="bottom-right"></div>
       </div>
     </div>
   </div>
