Update Ix chart

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   .btn {
     position: absolute;
     text-decoration: none;
-    background-color: steelblue;
+    background-color: crimson;
     color: white;
     padding: 2px 6px 2px 6px;
   }
@@ -89,13 +89,13 @@
   }
 
   path.beam--hover {
-    stroke: steelblue;
+    stroke: crimson;
     stroke-width: 6px;
     stroke-opacity: 1;
   }
 
   .bar {
-    fill: steelblue;
+    fill: crimson;
   }
 
   .w-group.m {
