--- a/index.html
+++ b/index.html
@@ -151,116 +151,6 @@
       </div>
       <div id="middle-container">
         <h1>23 Matching beams found</h1>
-        <table>
-          <tr>
-            <td>by Weight</td>
-            <td>by Depth</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W18x175</td>
-            <td>W14x170</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W18x175</td>
-            <td>W14x170</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-          <tr>
-            <td>W14x170</td>
-            <td>W18x175</td>
-          </tr>
-        </table>
       </div>
       <div id="bottom-container">
       </div>
@@ -279,6 +169,7 @@
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="./index.js"></script>
 <script src="./colorbrewer.min.js"></script>
+<script src="./matchList.js"></script>
 <script src="./profileChart.js"></script>
 <script src="./distributionChart.js"></script>
 <script src="./iChart.js"></script>
