Update beam macting list

--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
 
   table {
     width: 100%;
+    font-size: 14px;
   }
+
+  td {
+    padding: 2px;
+  }
+
 </style>
   <div id="nav-bar"></div>
   <div id="charts">
