--- a/index.html
+++ b/index.html
@@ -77,9 +77,17 @@
     shape-rendering: crispEdges;
   }
 
-  #bottom-right .axis.x path {
+  #bottom-container .axis.x path {
     stroke: none;
   }
+
+  #bottom-right .axis path {
+    stroke: none;
+  }
+  #bottom-right .axis.y .tick {
+    opacity: 0.5;
+  }
+
 
   .voronoi {
     fill: none;
