Small style updates

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     stroke: none;
   }
   #bottom-right .axis.y .tick {
-    opacity: 0.5;
+    fill-opacity: 0.40;
+    stroke-opacity: 0.40;
   }
 
 
