Update beam annotations

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <h1>23 Matching beams found</h1>
       </div>
       <div id="bottom-container">
+        <h3>Need a color scale</h3>
       </div>
     </div>
     <div id="right-column">
