Begin to update styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
   <div id="nav-bar">
     Pure Steel
-    <a class="link" href="http://jonsadka.com/" target="_blank">by Jon Sadka</a>
+    <a class="link" href="http://jonsadka.com/" target="_blank">Jon Sadka</a>
     <a class="link about" href="http://jonsadka.com/" target="_blank">About</a>
   </div>
   <div id="charts">
@@ -15,7 +15,7 @@
         </div> -->
         <div class="filter-category">
           <div class="header-container">
-            <h2>Moment (k-ft)</h2>
+            <h2>Moment <span class="units">k-ft</span></h2>
             <p>Moments in LRFD</p>
           </div>
           <div class="input-container first">
@@ -36,7 +36,7 @@
 
         <div class="filter-category">
           <div class="header-container">
-            <h2>Weight (plf)</h2>
+            <h2>Weight <span class="units">plf</span></h2>
             <p>Force on the beam due to gravity</p>
           </div>
           <div class="input-container first">
@@ -57,7 +57,7 @@
 
         <div class="filter-category">
           <div class="header-container">
-            <h2>I<sub>x</sub> (in<sup>4</sup>)</h2>
+            <h2>I<sub>x</sub><span class="units"> in<sup>4</sup></span></h2>
             <p>Moment of inertia</p>
           </div>
           <div class="input-container first">
@@ -78,7 +78,7 @@
 
         <div class="filter-category">
           <div class="header-container">
-            <h2>Length (ft)</h2>
+            <h2>Length<span class="units"> ft</span></h2>
             <p>Extent of beam from end to end</p>
           </div>
           <div class="input-container first">
