--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   </div>
 <body>
 <link rel="stylesheet" type="text/css" href="style.css"/>
-<script src="./node_modules/d3/d3.js"></script>
-<!-- <script src="//d3js.org/d3.v3.js"></script> -->
+<!-- <script src="./node_modules/d3/d3.js"></script> -->
+<script src="//d3js.org/d3.v3.js"></script>
 <script src="./index.js"></script>
 <script src="./colorbrewer.min.js"></script>
 <script src="./matchList.js"></script>
