Style updates and tweaks:

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input class="input-item min" type="number" id="I-min-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Min">
           </div>
           <div class="header-container">
-            I<sub>x</sub><span class="units"> in<sup>4</sup></span>
+            I<sub>x</sub><span class="units"> in⁴</span>
           </div>
           <div class="input-container">
             <input class="input-item max" type="number" id="I-max-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Max">
@@ -63,7 +63,7 @@
         <div class="concave"></div>
       </div>
       <div id="bottom-container">
-        <h3>Need a color scale</h3>
+        <!-- <h3>Need a color scale</h3> -->
       </div>
     </div>
     <div id="right-column">
