Update styles and remove color brewer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
   <div id="nav-bar">
     Steel Explorer
-    <a class="link" href="http://jonsadka.com/" target="_blank">Jon Sadka</a>
+    <a class="link" href="http://jonsadka.com/" target="_blank">by Jon Sadka</a>
     <a class="link about" href="http://jonsadka.com/" target="_blank">About</a>
   </div>
   <div id="charts">
@@ -81,7 +81,6 @@
 <!-- <script src="./node_modules/d3/d3.js"></script> -->
 <script src="//d3js.org/d3.v3.js"></script>
 <script src="./index.js"></script>
-<script src="./colorbrewer.min.js"></script>
 <script src="./matchList.js"></script>
 <script src="./profileChart.js"></script>
 <script src="./distributionChart.js"></script>
