--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-  <div id="nav-bar">
-    Steel Explorer
-    <a class="link" href="http://jonsadka.com/" target="_blank">by Jon Sadka</a>
-    <a class="link about" href="http://jonsadka.com/" target="_blank">About</a>
-  </div>
   <div id="charts">
     <div id="left-column">
       <div id="top-container">
+        <div id="nav-bar">
+          <span class="title">Steel Explorer</span>
+          <a class="link" href="http://jonsadka.com/" target="_blank">by Jon Sadka</a>
+        </div>
 <!--         Units
         <div>
           <label><input type="radio" name="mode" value="LRFD" checked>LRFD</label>
@@ -61,6 +60,28 @@
 
       <div id="middle-container">
         <div class="concave"></div>
+        <table id="match-list-table">
+          <tbody>
+            <tr>
+              <td>Lightest</td>
+              <td class="best-beam">
+                <div class="efficient-beam">
+                  <div class="primary">W_X_._</div>
+                  <div class="secondary">___ plf</div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Shallowest</td>
+              <td class="best-beam">
+                <div class="efficient-beam">
+                  <div class="primary">W_X__</div>
+                  <div class="secondary">_.__ in</div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div id="bottom-container">
         <!-- <h3>Need a color scale</h3> -->
